--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
     <script>
       var depth_1 = new Swiper('.depth_1',{
         slidesPerView: 'auto',
+        spaceBetween: 0,
         centeredSlides: false,
         initialSlide: 3,
         freeMode: true
       });
       var depth_2 = new Swiper('.depth_2',{
         slidesPerView: 'auto',
+        spaceBetween: 16,
         centeredSlides: false,
         initialSlide: 0,
         freeMode: true
