modify5 + add home.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="./res/css/swiper.min.css">
   </head>
   <body id="home">
-    <header>
+    <header class="border_box">
       <div id="nav_depth_1">
-        <div id="btn_menu" class="flex backdrop_st01 transition">
+        <div id="btn_menu" class="flex backdrop_st01">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24">
             <defs>
               <style>.a {fill: #fff; opacity: 0;}.b {fill: #ea002c;}</style>
@@ -29,7 +29,7 @@
             </g>
           </svg>
         </div>
-        <div class="mid_bar border_box_all backdrop_st01 transition">
+        <div class="mid_bar border_box_all backdrop_st01">
           <nav class="depth_1 swiper-container">
             <ul class="swiper-wrapper">
               <li class="swiper-slide"><a href="#game" data-id="game">게임</a></li>
@@ -42,7 +42,7 @@
             </ul>
           </nav>
         </div>
-        <div id="btn_search" class="flex backdrop_st01 transition">
+        <div id="btn_search" class="flex backdrop_st01">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <defs>
               <style>.a{fill:#fff;opacity:0;}.b{fill:#db0017;}</style>
@@ -52,7 +52,7 @@
           </svg>
         </div>
       </div>
-      <div id="nav_depth_2" class="scroll_wrap hide_right transition">
+      <div id="nav_depth_2">
         <nav class="depth_2 swiper-container border-box-all">
           <ul class="swiper-wrapper">
             <li class="swiper-slide"><a class="backdrop_st01" href="#game" data-id="game">게임</a></li>
@@ -101,6 +101,16 @@
     <script src="./res/js/jquery-3.5.0.slim.min.js" charset="utf-8"></script>
     <script src="./res/js/swiper.min.js" charset="utf-8"></script>
     <script>
+      var page_id = $('body').attr('id');
+      // //<![CDATA[
+      //   $(function(){
+      //     $("#active_page").load("home.html", function() {
+      //       alert("성공");
+      //     });
+      //   });
+      // //]]>
+
+      // 메인메뉴 슬라이더
       var depth_1 = new Swiper('.depth_1',{
         slidesPerView: 'auto',
         spaceBetween: 0,
@@ -108,6 +118,8 @@
         initialSlide: 3,
         freeMode: true
       });
+
+      // 서브메뉴 슬라이더
       var depth_2 = new Swiper('.depth_2',{
         slidesPerView: 'auto',
         spaceBetween: 16,
