jquery.js modify

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
       </div>
       <div class="copyright margin">ⓒ SK텔레콤 Crop.</div>
     </footer>
-    <script src="./res/js/jquery-3.5.0.slim.min.js" charset="utf-8"></script>
+    <!-- <script src="./res/js/jquery-3.5.0.slim.min.js" charset="utf-8"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./res/js/swiper.min.js" charset="utf-8"></script>
     <script>
       var page_id = $('body').attr('id');
