--- a/cnt/home.html
+++ b/cnt/home.html
@@ -1,15 +1,3 @@
 <article page_id="home">
-  <div class="logo">
-    <object type="image/svg+xml" data="t_logo.svg">
-  </div>
-  <div class="search_field">
-    <form name="search" role="search">
-        <span class="sch_inpw_in">
-            <input type="text" placeholder="검색어를 입력해주세요">
-        </span>
-        <button type="submit" class="sch_submit">
-            <img src="img/iconSearch.png" alt="검색">
-        </button>
-    </form>
-  </div>
+  <div>home</div>
 </article>
