--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       var url = location.href,
           hash = location.hash,
           page_id = $('body').attr('id'),
-          this_el = $(".depth_1 ul li a[data-id='+'hash'+'").next()
+          this_el = $(".depth_1 ul li a[data-id='+'hash'+'").next(),
           naxt_el = this_el.next(),
           prev_el = this_el.prev();
 
