--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
     <script src="./res/js/swiper.min.js" charset="utf-8"></script>
     <script>
       var url = location.href,
-          hash = location.hash,
+          thid_hash = location.hash,
           page_id = $('body').attr('id'),
-          this_el = $(".depth_1 ul li a[data-id='+'hash'+'").next(),
+          this_el = $(".depth_1 ul li a[data-id='+ hash +'").next(),
           naxt_el = this_el.next(),
-          prev_el = this_el.prev();
+          prev_el = this_el.prev(),
+          naxt_hash = naxt_el.hash,
+          prev_hash = prev_el.hash;
 
       $(function(){
         $("#active_page").load("./cnt/home.html", function() {
