--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
     <script src="./res/js/swiper.min.js" charset="utf-8"></script>
     <script>
       var url = location.href,
-          thid_hash = location.hash,
+          this_hash = location.hash,
           page_id = $('body').attr('id'),
-          this_el = $(".depth_1 ul li a[data-id='+ hash +'").next(),
+          this_el = $(".depth_1 ul li a[data-id='+ hash +']"),
           naxt_el = this_el.next(),
           prev_el = this_el.prev(),
           naxt_hash = naxt_el.hash,
