--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 naxt_hash = naxt_el.attr('href'),
                 prev_hash = prev_el.attr('href');
 
-                this_el.addClass(on);
+                this_el.addClass('on');
           },
         }
       });
