--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./res/css/common.css">
     <link rel="stylesheet" href="./res/css/swiper.min.css">
   </head>
-  <body id="home">
+  <body id="">
     <header class="border_box">
       <div id="nav_depth_1">
         <div id="btn_menu" class="flex backdrop_st01">
