--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         freeMode: false,
         on: {
           slideChangeTransitionEnd: function () {
-
+            page_load();
           },
         }
       });
